# LP_indexer

./: .gitignore  .golangci.yml  AGENTS.md  Makefile  README.md  buf.gen.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  shell.nix
.github/workflows/: candle-e2e.yml  ci.yml  docs.yml  sink-e2e.yml
api/http/: main.go  main_test.go  types.go
api/http/cache/: cache.go
api/http/types/: types.go
backfill/orchestrator/: README.md  config.go  config_test.go  orchestrator.go  orchestrator_test.go
backfill/substreams/: README.md  substreams.yaml
bridge/: README.md  config.go  config_test.go  mapping.go  mapping_test.go  service.go  service_test.go
cmd/bridge/: main.go
cmd/candles/: main.go
cmd/ingestor/geyser/: main.go
cmd/ingestor/geyser-demo/: main.go
cmd/sink/clickhouse/: main.go
cmd/sink/parquet/: main.go
cmd/tools/parquetinspect/: main.go
cmd/tools/sinkreplay/: main.go
decoder/common/: fixed_point.go  fixed_point_test.go  mint_metadata.go  mint_metadata_test.go  pair.go  pair_test.go
decoder/meteora/: README.md  decoder.go  decoder_test.go  proto.go  proto_test.go  types.go
decoder/meteora/testdata/: cpmm_swap.json  dlmm_swap.json
decoder/orca_whirlpool/: IMPLEMENTATION.md  decoder.go  decoder_test.go  fixtures_test.go  proto.go  types.go
decoder/raydium/: instruction.go  parser.go  parser_test.go
decoder/raydium/testdata/: swap_tx_1.json  swap_tx_2.json
docs/: ACCEPTANCE.md  API.md  BRIDGE.md  CICD_AND_DEPLOYMENT.md  CUTOVER.md  DECODER_EXPANSION.md  ENVIRONMENT.md  INTEGRATION.md  MODULES.md  OBSERVABILITY.md  OPS.md  OVERVIEW.md  README.md  SCHEMAS.md  SPEC.md  TEAM_PLAN.md  VALIDATION_GUIDE.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-archive/: ACCEPTANCE.md  BACKFILL.md  CANDLE_ENGINE.md  ENVIRONMENT.md  EXPECTATIONS.md  HEALTHCHECKS.md  INGESTOR_GEYSER_DEMO.md  INTEGRATION.md  NORMALIZATION.md  OBSERVABILITY.md  OPS.md  REPLAY_TEST.md  ROADMAP.md  TESTING.md  WALLET_HEURISTICS.md
docs/api/: openapi.yaml
docs/docs/: index.mdx  intro.md  legacy.md
docs/docs/architecture/: candles.mdx  events.mdx  nats.mdx  pipeline.mdx  storage.mdx
docs/docs/ops/: clickhouse.mdx  deploy.mdx  local-dev.mdx  nats-jetstream.mdx
docs/docs/reference/: cli.mdx  coverage.mdx  env.mdx  legacy-archive.mdx
docs/docs/services/: api.mdx  backfill.mdx  bridge.mdx  decoder.mdx  ingestor.mdx  sinks.mdx
docs/docs/start-here/: dev-environment.mdx  (+4 more)
docs/validation/: CANDLE_E2E.md
fixtures/: sink_sample.json  swaps_parity.csv  swaps_sample.csv
ingestor/common/: slot_cache.go  slot_cache_test.go  txmeta.go
ingestor/decoder/: decoder.go  decoder_test.go
ingestor/geyser/: README.md  client.go  config.go  failover_service.go  failover_service_test.go  processor.go  processor_test.go  service.go
ingestor/helius/: README.md  client.go  client_test.go  config.go  config_test.go  stream_client.go
observability/: metrics.go
ops/: geyser_programs_demo.json  programs.yaml
ops/bridge/: subject_map.yaml
ops/clickhouse/: all.sql  holders_estimate.sql  ohlcv_1d.sql  ohlcv_1h.sql  ohlcv_1m.sql  ohlcv_1s.sql  ohlcv_5m.sql  pool_snapshots.sql  trades.sql  wallet_activity.sql
ops/dashboards/: README.md
ops/jetstream/: README.md  consumer.swaps.json  streams.dex.json  streams.legacy.json
scripts/: apply_clickhouse_schema.sh  build_candles.sh  check_bridge_metrics.sh  check_candle_parity.sh  jetstream-validate.sh  measure_candle_perf.sh  run_candle_e2e.sh  run_sink_e2e.sh
scripts/docs/: generate_go_code_reference.go
sinks/clickhouse/: config.go  service.go  service_test.go  writer.go  writer_test.go
sinks/nats/: README.md  config.go  config_test.go  publisher.go  publisher_test.go
sinks/parquet/: README.md  config.go  config_test.go  service.go  writer.go  writer_test.go
state/candle_cpp/: CMakeLists.txt  README.md
state/candle_cpp/include/: candle_types.hpp  candle_worker.hpp  fixed_point.hpp  publisher.hpp
state/candle_cpp/src/: candle_worker.cpp  fixed_point.cpp  publisher.cpp
state/candle_cpp/tests/: candle_finalize_test.cpp  clickhouse_writer_bridge_test.cpp  fixed_point_test.cpp  publisher_dispatch_test.cpp
state/candle_cpp/tools/: candle_replay.cpp
(+125 files in other folders)
